functioning app clicks

--- a/src/containers/Phone.css
+++ b/src/containers/Phone.css
@@ -2,6 +2,7 @@
     position: absolute;
     margin-top: 5%;
     margin-left: 850px;
+    margin-right: 5%;
     height: 630px;
     width: 370px;
     border-radius: 30px;
