--- a/src/containers/Phone.css
+++ b/src/containers/Phone.css
@@ -2,9 +2,8 @@
     position: absolute;
     margin-top: 5%;
     margin-left: 850px;
-    margin-right: 5%;
-    height: 630px;
-    width: 370px;
+    height: 73vh;
+    width: 25vw;
     border-radius: 30px;
     border: outset 10px #141114;
     background-image: linear-gradient(#0f0d0f, #141114);
@@ -18,10 +17,11 @@
     padding-top: 15px;
     padding-right: 25px;
     padding-left: 25px;
-    height: 605px;
-    width: 310px;
+    height: 70vh;
+    width: 20vw;
     border-radius: 20px;
     background-color: white;
+    overflow: scroll;
 }
 
 .apps {
@@ -32,13 +32,14 @@
 }
 
 .apps img {
-    height: 100px;
+    height: 10vh;
 }
 
 .icon {
     text-align: center;
-    width: 130px;
+    width: 7vw;
     margin-bottom: 15px;
+    border: solid 1px blue;
 }
 
 .icon span {
