--- a/src/containers/Containers.css
+++ b/src/containers/Containers.css
@@ -1,9 +1,14 @@
+@font-face {
+    font-family: dogica;
+    src: url('./fonts/dogica.otf');
+}
+
 .view {
     position: absolute;
-    margin-top: 5%;
+    margin-top: 7vh;
     margin-left: 25px;
-    width: 65vw;
-    height: 73vh;
+    width: 775px;
+    height: 650px;
     overflow: hidden;
     border: solid 5px black;
 }
@@ -11,30 +16,28 @@
 .map {
     position: absolute;
     image-rendering: pixelated;
-    height: 73vh;
+    height: 750px;
 }
 
 .phone {
-    position: absolute;
-    margin-top: 5%;
-    margin-left: 70vw;
-    height: 73vh;
-    width: 25vw;
+    float: right;
+    margin-top: 7vh;
+    margin-right: 5%;
+    height: 640px;
+    width: 300px;
     border-radius: 30px;
     border: outset 10px #141114;
     background-image: linear-gradient(#0f0d0f, #141114);
 }
 
 .screen {
-    position: block;
+    position: absolute;
     margin-top: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 3vh;
-    padding-right: 2vw;
-    padding-left: 2vw;
-    height: 69vh;
-    width: 20vw;
+    padding-top: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
+    height: 600px;
+    width: 270px;
     border-radius: 20px;
     background-color: white;
     overflow: scroll;
@@ -48,15 +51,17 @@
 }
 
 .apps img {
-    height: 10vh;
+    height: 100px;
 }
 
 .icon {
     text-align: center;
-    width: 7vw;
+    width: 120px;
     margin-bottom: 15px;
 }
 
 .icon span {
+    font-family: dogica;
+    font-size: 8pt;
     margin-bottom: 15px;
 }
