--- a/src/containers/Containers.css
+++ b/src/containers/Containers.css
@@ -39,7 +39,7 @@
     background-image: linear-gradient(#0f0d0f, #141114);
 }
 
-.screen {
+.homescreen, .screen {
     position: absolute;
     margin-top: 5px;
     padding-top: 30px;
@@ -48,8 +48,15 @@
     height: 600px;
     width: 270px;
     border-radius: 20px;
-    background-color: white;
     overflow: scroll;
+}
+
+.screen {
+    background-color: white;
+}
+
+.homescreen {
+    background-image: url('/public/phone/PhoneBkgd.png');
 }
 
 .apps {
