--- a/src/components/arrows/Arrows.css
+++ b/src/components/arrows/Arrows.css
@@ -4,5 +4,13 @@
 }
 
 .arrows img {
-    height: 200px;
+    animation-name: arrowsize;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes arrowsize {
+    0% {height: 200px}
+    50% {height: 210px}
+    100% {height: 200px}
 }
