adds messaging details page

--- a/src/containers/Containers.css
+++ b/src/containers/Containers.css
@@ -54,10 +54,13 @@
 
 .screen {
     background-color: white;
+    overflow: hidden;
 }
 
 .homescreen {
     background-image: url('/public/phone/PhoneBkgd.png');
+    overflow: hidden;
+
 }
 
 .apps {
