--- a/src/containers/Containers.css
+++ b/src/containers/Containers.css
@@ -66,7 +66,7 @@
     margin-bottom: 15px;
 }
 
-.homescreen, .bulletin, .friendships, .inventory, .online, .screen {
+.homescreen, .bulletin, .friendships, .inventory, .online, .messaging, .screen {
     position: absolute;
     margin-top: 5px;
     height: 630px;
@@ -85,7 +85,7 @@
     overflow: hidden;
 }
 
-.bulletin, .friendships, .inventory, .online {
+.bulletin, .friendships, .inventory, .online, .messaging {
     background-color: #242424;
 }
 
@@ -215,4 +215,51 @@
 .online {
     font-family: dogica;
     color: aqua;
+}
+
+.messageDropdown {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: dogica;
+    text-align: center;
+    color: aqua;
+
+}
+
+.messageDropdown select {
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    height: 16pt;
+    width: 60%;
+    font-family: dogica;
+    background-color: #1A1A1A;
+    color: aqua;
+}
+
+.messageDropdown button {
+    background-color: transparent;
+    border: none;
+    font-family: dogica;
+    letter-spacing: -1pt;
+    color: aqua;
+}
+
+.messageList {
+    font-family: dogica;
+    color: black;
+}
+
+.messageName {
+    background-color: aqua;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.messageUserDetail {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-family: dogica;
+    background-color: aqua;
 }
