--- a/src/containers/Containers.css
+++ b/src/containers/Containers.css
@@ -66,18 +66,13 @@
     margin-bottom: 15px;
 }
 
-.homescreen, .bulletin, .friendships, .inventory, .online, .messaging, .screen {
+.homescreen, .bulletin, .friendships, .inventory, .online, .messaging, .whiteboard
+{
     position: absolute;
     margin-top: 5px;
     height: 630px;
     width: 300px;
     border-radius: 20px;
-    overflow: scroll;
-}
-
-.screen {
-    background-color: white;
-    overflow: hidden;
 }
 
 .homescreen {
@@ -85,7 +80,7 @@
     overflow: hidden;
 }
 
-.bulletin, .friendships, .inventory, .online, .messaging {
+.bulletin, .friendships, .inventory, .online, .messaging, .whiteboard {
     background-color: #242424;
 }
 
@@ -145,22 +140,23 @@
     height: 50px;
     width: 100%;
     border-top: solid 2px white;
+    background-color: #1A1A1A;
 }
 
-.bullList {
+.bullList, .messageList {
     margin-top: 15px;
     height: 510px;
     overflow: scroll;
 }
 
-.bullItem {
+.bullItem, .messageItem {
     margin-top: 5px;
     margin-left: 10px;
     margin-right: 10px;
     border-bottom: solid 1px white;
 }
 
-.bullText {
+.bullText, .messageText {
     font-family: dogica;
     font-size: 10pt;
     letter-spacing: -1pt;
@@ -245,6 +241,7 @@
 }
 
 .messageList {
+    margin-top: 15px;
     font-family: dogica;
     color: black;
 }
@@ -261,4 +258,9 @@
     text-align: center;
     font-family: dogica;
     background-color: aqua;
+}
+
+.messageItems {
+    height: 480px;
+    overflow: scroll;
 }
