--- a/src/containers/Containers.css
+++ b/src/containers/Containers.css
@@ -54,6 +54,10 @@
     height: 100px;
 }
 
+.apps img:hover {
+    cursor: pointer;
+}
+
 .icon {
     text-align: center;
     width: 120px;
@@ -91,6 +95,10 @@
     color: aqua;
 }
 
+.back:hover, .send:hover {
+    cursor: pointer;
+}
+
 .back {
     margin-top: 15px;
     margin-left: 5px;
@@ -115,7 +123,7 @@
     border-bottom: solid 2px white;
 }
 
-.bulletin input, .messageForm input {
+.bulletin input, .messageForm input, .createTask input {
     width: 200px;
     height: 14pt;
     border: solid 2px aqua;
@@ -126,7 +134,7 @@
     letter-spacing: -1pt;
 }
 
-.bulletin form, .messageForm {
+.bulletin form, .messageForm, .createTask form {
     position: absolute;
     margin-left: 15px;
     margin-bottom: 15px;
@@ -231,12 +239,20 @@
     color: aqua;
 }
 
-.messageDropdown button {
+.messageDropdown button, .createTask button {
     background-color: transparent;
     border: none;
     font-family: dogica;
     letter-spacing: -1pt;
     color: aqua;
+}
+
+.createTask button {
+    font-size: 9pt;
+}
+
+.messageDropdown button:hover {
+    cursor: pointer;
 }
 
 .messageList {
@@ -259,6 +275,10 @@
     background-color: aqua;
 }
 
+.messageName:hover {
+    cursor: pointer;
+}
+
 .messageItems {
     height: 480px;
     overflow: scroll;
@@ -272,4 +292,62 @@
     font-size: 10pt;
     color: aqua;
     line-height: 12pt;
+}
+
+.todoButton, .inProgressButton, .completeButton {
+    color: white;
+    text-decoration: underline;
+}
+
+.whiteboard {
+    overflow: auto;
+}
+
+.todoTask {
+    margin-top: 10px;
+    text-align: center;
+    word-wrap: break-word;
+}
+
+.todoTask span {
+    margin-top: 10px;
+    font-family: dogica;
+    color: white;
+}
+
+.todoItem {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+    font-family: dogica;
+    color: white;
+    border-bottom: solid 2px white;
+}
+
+.authorName, .todoTimestamp {
+    font-family: dogica;
+    font-size: 7pt;
+    color: white;
+}
+
+.todoText {
+    color: aqua;
+}
+
+h2 {
+    font-family: dogica;
+    text-align: center;
+    margin-bottom: 10px;
+    text-decoration: underline;
+    color: aqua;
+}
+
+.todoItem button {
+    margin-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: solid 2px aqua;
+    background-color: transparent;
+    font-family: dogica;
+    color: aqua;
 }
